[FIX/#106] 이슈 클러스터링 리뷰 결함 수정